# cs3300-eng-linux-cmd

./: .gitignore  LICENSE  README.md  environment.yml  execution.py  install.sh  llm.py  pyproject.toml  safety.py  translator.py
demo/: analyze_logs.py  chat_history_demo.json  config.json  notes.txt  sales_q1.txt
src/: Interpretation_Module.py  chat_history.json  cli.py  command_runner.py  command_validator.py  explainer.py  main.py  ollama_client.py  prompt_builder.py  response_parser.py  security.py  terminal_ui.py  test_testCases.py
src/eng_linux_cmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: example_test.py  example_text.txt  test_results_detailed.txt  test_testCases.py
